--- a/pages/ads.html
+++ b/pages/ads.html
@@ -94,8 +94,8 @@
                 <div class="row">
                   <div class="col-md-6 margin-top-web-2" data-aos="fade-up">
                     <div class="">
-                        <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Lorem ipsum dolor sit amet <br> consectetur. Commodo </p>
-                        <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Lorem ipsum dolor sit amet consectetur. Lorem nunc </p>
+                        <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Beriklan dengan mudah, <br> efisien & hemat</p>
+                        <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Creative Solution, Creative Results</p>
                     </div>
                     <div class="">
                         <button class="btn btn-home-tentang-portofolio-layanan mb-3"><a class="link-home" href="">Konsultasikan sekarang</a></button>
@@ -121,25 +121,25 @@
                 <div class="row">
                     <div class="col-md-12" data-aos="fade-up">
                         <div class="text-center mb-5">
-                            <p class="app-primary-dua-0 f-w-400 mb-3">Get to know us!</p>
-                            <h6 class="app-primary-dua-80 f-w-700">The Benefits Obtained</h6>
+                            <p class="app-primary-dua-0 f-w-400 mb-3">Ayo jelajahi lebih jauh</p>
+                            <h6 class="app-primary-dua-80 f-w-700">Manfaat yang Didapat</h6>
                         </div>
                     </div>
                     <div class="col-lg-4" data-aos="fade-up" data-aos="fade-up">
                         <div class="">
-                            <div class="grup-text-about-layanan text-center mb-3">
+                            <div class="grup-text-about-layanan text-center mb-5">
                               <div class="bg-number-cs mb-2 m-auto">
                                 <h6 class="app-primary-dua-0 f-w-700 p-2">1</h6>
                               </div>
-                                <p class="heading-text-three app-primary-dua-80 f-w-700">Lorem Ipsume</p>
-                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">Halo! Kami adalah agensi branding dan <br> digital. Kami percaya bahwa "ide-ide hebat" <br> dapat diwujudkan sebagai kunci keberhasilan. </p>
+                                <p class="heading-text-three app-primary-dua-80 f-w-700">Branding</p>
+                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">meningkatkan dan menjangkau khalayak <br> yang lebih luas, dengan menampilkan merek <br> Anda di berbagai platform digital.</p>
                             </div>
                             <div class="grup-text-about-layanan text-center mb-5">
                               <div class="bg-number-cs mb-2 m-auto">
                                 <h6 class="app-primary-dua-0 f-w-700 p-2">2</h6>
                               </div>
-                                <p class="heading-text-three app-primary-dua-80 f-w-700">Lorem Ipsume</p>
-                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">Halo! Kami adalah agensi branding dan <br> digital. Kami percaya bahwa "ide-ide hebat" <br> dapat diwujudkan sebagai kunci keberhasilan. </p>
+                                <p class="heading-text-three app-primary-dua-80 f-w-700">Efektif</p>
+                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">menargetkan pelanggan potensial yang lebih <br> spesifik, berdasarkan faktor seperti lokasi <br> geografis, minat, perilaku, dan demografi.</p>
                             </div>
                         </div>
                     </div>
@@ -148,19 +148,19 @@
                     </div>
                     <div class="col-lg-4" data-aos="fade-up">
                         <div class="">
-                            <div class="grup-text-about-layanan text-center mb-3">
+                            <div class="grup-text-about-layanan text-center mb-5">
                               <div class="bg-number-cs mb-2 m-auto">
                                 <h6 class="app-primary-dua-0 f-w-700 p-2">3</h6>
                               </div>
-                                <p class="heading-text-three app-primary-dua-80 f-w-700">Lorem Ipsume</p>
-                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">Halo! Kami adalah agensi branding dan <br> digital. Kami percaya bahwa "ide-ide hebat" <br> dapat diwujudkan sebagai kunci keberhasilan. </p>
+                                <p class="heading-text-three app-primary-dua-80 f-w-700">Fleksibilitas</p>
+                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">fleksibilitas dalam menyesuaikan pengeluaran <br> iklan sesuai dengan anggaran bisnis.</p>
                             </div>
                             <div class="grup-text-about-layanan text-center">
                               <div class="bg-number-cs mb-2 m-auto">
                                 <h6 class="app-primary-dua-0 f-w-700 p-2">4</h6>
                               </div>
-                                <p class="heading-text-three app-primary-dua-80 f-w-700">Lorem Ipsume</p>
-                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">Halo! Kami adalah agensi branding dan <br> digital. Kami percaya bahwa "ide-ide hebat" <br> dapat diwujudkan sebagai kunci keberhasilan. </p>
+                                <p class="heading-text-three app-primary-dua-80 f-w-700">Goals</p>
+                                <p class="paragraph-text-two app-primary-dua-0 f-w-400">mencapai tujuan bisnis secara lebih cepat <br> dan efektif dengan menjangkau khalayak <br> yang lebih luas dan meningkatkan penjualan.</p>
                             </div>
                         </div>
                     </div>
@@ -176,8 +176,8 @@
                       <div class="row">
                         <div class="col-md-12" data-aos="fade-up">
                             <div class="text-center mb-5">
-                                <h6 class="app-primary-dua-0 f-w-700 mb-3">Portfolio</h6>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400">Hasil rekap kerja kami bersama tim</p>
+                                <h6 class="app-primary-dua-0 f-w-700 mb-3">Karya Kami</h6>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400">Hasih karya kami bersama tim</p>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
@@ -190,7 +190,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -211,7 +211,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -232,7 +232,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -243,69 +243,6 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
-                            <div class="card-portfolio mb-3">
-                              <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
-                              <div class="card-bdoy">
-                                <div class="group-text-portfolio p-3">
-                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                  <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
-                                  <a href="#" class="link-read-more paragraf-text-tree">
-                                    <div class="group-read-more-in-blog">
-                                      <div class="text-read">
-                                        <span>Read More</span>
-                                      </div>
-                                      <div class="icon-read">
-                                        <i class='bx bx-right-arrow-alt'></i>
-                                      </div>
-                                    </div>
-                                  </a>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
-                            <div class="card-portfolio mb-3">
-                              <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
-                              <div class="card-bdoy">
-                                <div class="group-text-portfolio p-3">
-                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                  <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
-                                  <a href="#" class="link-read-more paragraf-text-tree">
-                                    <div class="group-read-more-in-blog">
-                                      <div class="text-read">
-                                        <span>Read More</span>
-                                      </div>
-                                      <div class="icon-read">
-                                        <i class='bx bx-right-arrow-alt'></i>
-                                      </div>
-                                    </div>
-                                  </a>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
-                            <div class="card-portfolio mb-3">
-                              <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
-                              <div class="card-bdoy">
-                                <div class="group-text-portfolio p-3">
-                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                  <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
-                                  <a href="#" class="link-read-more paragraf-text-tree">
-                                    <div class="group-read-more-in-blog">
-                                      <div class="text-read">
-                                        <span>Read More</span>
-                                      </div>
-                                      <div class="icon-read">
-                                        <i class='bx bx-right-arrow-alt'></i>
-                                      </div>
-                                    </div>
-                                  </a>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
                           <div class="col-md-12" data-aos="fade-up">
                             <div class="text-center">
                                 <div class="col-md-12" data-aos="fade-up">
@@ -340,7 +277,7 @@
 
 
                   <!--========= Open Section Portfolio =========-->
-                  <section class="margin-top-web-1 bg-paket-layanan" data-aos="fade-up">
+                  <!-- <section class="margin-top-web-1 bg-paket-layanan" data-aos="fade-up">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12" data-aos="fade-up">
@@ -474,7 +411,7 @@
                         </div>
                       </div>
                     </div>
-                  </section>
+                  </section> -->
                   <!--========= Close Section Portfolio =========-->
 
 
@@ -488,7 +425,7 @@
                 </div>
               </div>
               <div class="col-md-6" data-aos="fade-up">
-                <div class="p-lg-5 mb-5">
+                <div class="p-lg-3 mb-5">
                   <div class="mb-3">
                     <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Konsultasi tim kami</p>
                     <h6 class="app-primary-dua-0 f-w-700">Ayo mulai lakukan perubahan 😊</h6>
@@ -613,7 +550,7 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
                 <div class="text-center">
