--- a/pages/blog.html
+++ b/pages/blog.html
@@ -429,7 +429,7 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
                 <div class="text-center">
