--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -142,7 +142,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -163,7 +163,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -184,7 +184,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -205,7 +205,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -226,7 +226,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -247,7 +247,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -268,7 +268,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -289,7 +289,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
@@ -310,7 +310,7 @@
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
-                                      <span>Read More</span>
+                                      <span>Selengkapnya</span>
                                     </div>
                                     <div class="icon-read">
                                       <i class='bx bx-right-arrow-alt'></i>
